--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="author" content="Иван Иванов">
+    <meta name="author" content="Павел Косолапов">
     <link rel="shortcut icon" href="/favicon.ico">
 
     <title>Мои задания</title>
@@ -43,26 +43,26 @@
 
       <div class="row marketing">
         <div class="col">
-          <h4>DTD</h4>
-          <p>Валидация</p>
+          <h4>Первое задание</h4>
+          <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/ifmo-i-intro-KosolapovPavel" role="button">Результаты</a></p>
 
-          <h4>Схемы</h4>
-          <p>Валидация</p>
+          <h4>DTD и Схемы</h4>
+<p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/15092017-KosolapovPavel" role="button">Результаты</a></p>
 
           </div>
 
         <div class="col">
-          <h4>Стили</h4>
-          <p>Преобразования...</p>
+          <h4>XSL</h4>
+          <p><a class="btn btn-lg btn-success" target="_blank" href="/xsl-KosolapovPavel-master/math.xml" role="button">MathJax</a></p>
 
           <h4>SVG</h4>
-          <p>Ещё результаты...</p>
+          <p><a class="btn btn-lg btn-success" target="_blank" href="/xsl-KosolapovPavel-master/math.xml" role="button">Image</a></p>
 
          </div>
       </div>
 
       <footer class="footer">
-        <p>&copy; Иван Иванов 2017</p>
+        <p>&copy; Косолапов Павел 2017</p>
       </footer>
 
     </div>
