--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
         <div class="col">
           <h4>XSL</h4>
-          <p><a class="btn btn-lg btn-success" target="_blank" href="/xsl-KosolapovPavel-master/math.xml" role="button">MathJax</a></p>
+          <p><a class="btn btn-lg btn-success" target="_blank" href="/math.xml" role="button">MathJax</a></p>
 
           <h4>SVG</h4>
           <p><a class="btn btn-lg btn-success" target="_blank" href="/xsl-KosolapovPavel-master/math.xml" role="button">Image</a></p>
