--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,9 @@
           <h4>SVG</h4>
           <p><a class="btn btn-lg btn-success" target="_blank" href="/xsl-KosolapovPavel-master/math.xml" role="button">Image</a></p>
 
+          <h4>MathJax</h4>
+          <p><a class="btn btn-lg btn-success" target="_blank" href="https://drive.google.com/open?id=1RZhDYkrbmK3LOVOgAPMB_bQfbUZBHIarGTkH74ioIKs" role="button">Image</a></p>
+
          </div>
       </div>
 
