--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,9 @@
           <h4>DTD и Схемы</h4>
 <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/15092017-KosolapovPavel" role="button">Результаты</a></p>
 
+          <h4>ВКР и НИР</h4>
+<p><a class="btn btn-lg btn-success" target="_blank" href="#" role="button">Документ</a></p>
+
           </div>
 
         <div class="col">
