--- a/public/index.html
+++ b/public/index.html
@@ -56,13 +56,13 @@
 
         <div class="col">
           <h4>XSL</h4>
-          <p><a class="btn btn-lg btn-success" target="_blank" href="/xsl/math.xml" role="button">MathJax</a></p>
+          <p><a class="btn btn-lg btn-success" target="_blank" href="/xsl/math.xml" role="button">Формула</a></p>
 
           <h4>SVG</h4>
-          <p><a class="btn btn-lg btn-success" target="_blank" href="/xsl-KosolapovPavel-master/svg/img.svg" role="button">Image</a></p>
+          <p><a class="btn btn-lg btn-success" target="_blank" href="/xsl-KosolapovPavel-master/svg/img.svg" role="button">Изображение</a></p>
 
           <h4>MathJax</h4>
-          <p><a class="btn btn-lg btn-success" target="_blank" href="https://drive.google.com/open?id=1RZhDYkrbmK3LOVOgAPMB_bQfbUZBHIarGTkH74ioIKs" role="button">Image</a></p>
+          <p><a class="btn btn-lg btn-success" target="_blank" href="https://drive.google.com/open?id=1RZhDYkrbmK3LOVOgAPMB_bQfbUZBHIarGTkH74ioIKs" role="button">Презентация</a></p>
 
          </div>
       </div>
