--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/15092017-KosolapovPavel" role="button">Результаты</a></p>
 
           <h4>ВКР и НИР</h4>
-<p><a class="btn btn-lg btn-success" target="_blank" href="#" role="button">Документ</a></p>
+<p><a class="btn btn-lg btn-info" target="_blank" href="#" role="button">Документ</a></p>
 
           </div>
 
@@ -62,7 +62,7 @@
           <p><a class="btn btn-lg btn-success" target="_blank" href="/xsl-KosolapovPavel-master/svg/img.svg" role="button">Изображение</a></p>
 
           <h4>MathJax</h4>
-          <p><a class="btn btn-lg btn-success" target="_blank" href="https://drive.google.com/open?id=1RZhDYkrbmK3LOVOgAPMB_bQfbUZBHIarGTkH74ioIKs" role="button">Презентация</a></p>
+          <p><a class="btn btn-lg btn-info" target="_blank" href="https://drive.google.com/open?id=1RZhDYkrbmK3LOVOgAPMB_bQfbUZBHIarGTkH74ioIKs" role="button">Презентация</a></p>
 
          </div>
       </div>
